force-app/main/default/objects/A_Case__c/A_Case__c.object-meta.xml
<CustomObject>
    <description>Archive object to support records archived with Big Objects prior to migration to new solution. DO NOT USE OR DELETE THIS OBJECT. Its empty definition is required to ensure old records can be surfaced in new archive solution</description>
    <label>_ARCHIVE Case</label>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>_ARCHIVE Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>