force-app/main/default/objects/A_Case__c/fields/A_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>A_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>A_Case__c</referenceTo>
    <relationshipLabel>OLD Archived Cases (RelatedCase__c)</relationshipLabel>
    <relationshipName>A_RelatedCase_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>