force-app/main/default/objects/A_Case__c/fields/Actual_Network_Milestone_Violated__c.field-meta.xml
<CustomField>
    <fullName>Actual_Network_Milestone_Violated__c</fullName>
    <label>Actual Network Milestone Violated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>