force-app/main/default/objects/A_Case__c/fields/Add_Caller_Comment__c.field-meta.xml
<CustomField>
    <fullName>Add_Caller_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>