force-app/main/default/objects/A_Case__c/fields/Address3Line2__c.field-meta.xml
<CustomField>
    <fullName>Address3Line2__c</fullName>
    <label>Sender Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>