force-app/main/default/objects/A_Case__c/fields/AMLCTF_Surplus_or_Shortfall_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Surplus_or_Shortfall_Amount__c</fullName>
    <label>Surplus or Shortfall Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>