force-app/main/default/objects/A_Case__c/fields/APT_ABN__c.field-meta.xml
<CustomField>
    <fullName>APT_ABN__c</fullName>
    <label>ABN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>