force-app/main/default/objects/A_Case__c/fields/APT_Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Category__c</fullName>
    <label>Contract Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>