force-app/main/default/objects/A_Case__c/fields/APT_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OLD Archived Cases (APT_Contract_Owner__c)</relationshipLabel>
    <relationshipName>A_APT_Contract_Owner_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>