force-app/main/default/objects/A_Case__c/fields/Article_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Article_Expected_Delivery_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <type>DateTime</type>
</CustomField>