force-app/main/default/objects/A_Case__c/fields/Article_Sender_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Article_Sender_Postcode__c</fullName>
    <label>Sender Postcode</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>