force-app/main/default/objects/A_Case__c/fields/ArticleQuantity__c.field-meta.xml
<CustomField>
    <fullName>ArticleQuantity__c</fullName>
    <label>Article Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>