force-app/main/default/objects/A_Case__c/fields/ArticleRecordType__c.field-meta.xml
<CustomField>
    <fullName>ArticleRecordType__c</fullName>
    <label>Article Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>