force-app/main/default/objects/A_Case__c/fields/ArticleType__c.field-meta.xml
<CustomField>
    <fullName>ArticleType__c</fullName>
    <label>Article Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>