force-app/main/default/objects/A_Case__c/fields/ATL_Allowed_Billing_Accounts__c.field-meta.xml
<CustomField>
    <fullName>ATL_Allowed_Billing_Accounts__c</fullName>
    <label>ATL Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>