force-app/main/default/objects/A_Case__c/fields/ATL_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>ATL_Update_Flag__c</fullName>
    <label>LDC Approved or Rejected?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>