force-app/main/default/objects/A_Case__c/fields/Auto_Email_Response_sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Email_Response_sent__c</fullName>
    <label>Auto Email Response sent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>