force-app/main/default/objects/A_Case__c/fields/Business_Days_Custom_Info__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Custom_Info__c</fullName>
    <label>Business Days Custom Info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>