force-app/main/default/objects/A_Case__c/fields/Calc_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Calc_Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>