force-app/main/default/objects/A_Case__c/fields/Case_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Profile__c</fullName>
    <label>Profile</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>