force-app/main/default/objects/A_Case__c/fields/Case_Weight__c.field-meta.xml
<CustomField>
    <fullName>Case_Weight__c</fullName>
    <label>Case Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>