force-app/main/default/objects/A_Case__c/fields/ChatKey__c.field-meta.xml
<CustomField>
    <fullName>ChatKey__c</fullName>
    <label>ChatKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>