force-app/main/default/objects/A_Case__c/fields/CM_Reason__c.field-meta.xml
<CustomField>
    <fullName>CM_Reason__c</fullName>
    <label>CM Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>