force-app/main/default/objects/A_Case__c/fields/CM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CM_Start_Date__c</fullName>
    <label>CM Start Date</label>
    <type>DateTime</type>
</CustomField>