force-app/main/default/objects/A_Case__c/fields/CollectionCardColour__c.field-meta.xml
<CustomField>
    <fullName>CollectionCardColour__c</fullName>
    <label>Collection Card Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>