force-app/main/default/objects/A_Case__c/fields/CommunityAgent__c.field-meta.xml
<CustomField>
    <fullName>CommunityAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OLD Archived Cases (CommunityAgent__c)</relationshipLabel>
    <relationshipName>A_CommunityAgent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>