force-app/main/default/objects/A_Case__c/fields/Compensation_Paid__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Paid__c</fullName>
    <label>Compensation Paid</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>