force-app/main/default/objects/A_Case__c/fields/Consignment_Unique_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Unique_External_ID__c</fullName>
    <label>Consignment Unique External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>