force-app/main/default/objects/A_Case__c/fields/ContactDoNotDisclose__c.field-meta.xml
<CustomField>
    <fullName>ContactDoNotDisclose__c</fullName>
    <label>ContactDoNotDisclose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>