force-app/main/default/objects/A_Case__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>DateTime</type>
</CustomField>