force-app/main/default/objects/A_Case__c/fields/CRN__c.field-meta.xml
<CustomField>
    <fullName>CRN__c</fullName>
    <label>CRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>