force-app/main/default/objects/A_Case__c/fields/Customer_emoticon_value__c.field-meta.xml
<CustomField>
    <fullName>Customer_emoticon_value__c</fullName>
    <label>Customer emoticon value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>