force-app/main/default/objects/A_Case__c/fields/Delivery_Address_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_Post_Code__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>