force-app/main/default/objects/A_Case__c/fields/Delivery_Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_Validation__c</fullName>
    <label>Delivery Address Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>