force-app/main/default/objects/A_Case__c/fields/Delivery_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Advice_Number__c</fullName>
    <label>Delivery Advice Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>