force-app/main/default/objects/A_Case__c/fields/DWS_Type__c.field-meta.xml
<CustomField>
    <fullName>DWS_Type__c</fullName>
    <label>DWS Type</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>