force-app/main/default/objects/A_Case__c/fields/EmailToCaseAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailToCaseAddress__c</fullName>
    <label>Email-to-Case Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>