force-app/main/default/objects/A_Case__c/fields/Employee_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Employee_Lastname__c</fullName>
    <label>Employee Fullname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>