force-app/main/default/objects/A_Case__c/fields/Exclude_Subscription_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Subscription_Automation__c</fullName>
    <label>Exclude Scanning Automation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>