force-app/main/default/objects/A_Case__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>