force-app/main/default/objects/A_Case__c/fields/Initial_Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Initial_Call_Purpose__c</fullName>
    <label>Initial Call Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>