force-app/main/default/objects/A_Case__c/fields/Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution__c</fullName>
    <label>Issue Resolution Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>