force-app/main/default/objects/A_Case__c/fields/Network_Depot_ID__c.field-meta.xml
<CustomField>
    <fullName>Network_Depot_ID__c</fullName>
    <label>Depot Code</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>