force-app/main/default/objects/A_Case__c/fields/Network_Org_Unit_Addr_2__c.field-meta.xml
<CustomField>
    <fullName>Network_Org_Unit_Addr_2__c</fullName>
    <label>Address Line 2</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>