force-app/main/default/objects/A_Case__c/fields/Network_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Network_Post_Code__c</fullName>
    <label>Post Code</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>