force-app/main/default/objects/A_Case__c/fields/NetworkComments__c.field-meta.xml
<CustomField>
    <fullName>NetworkComments__c</fullName>
    <label>Network Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>