force-app/main/default/objects/A_Case__c/fields/Other_Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Report_Detail__c</fullName>
    <label>Other Report Detail</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>