force-app/main/default/objects/A_Case__c/fields/Out_of_Charter__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Charter__c</fullName>
    <label>Out of Charter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>