force-app/main/default/objects/A_Case__c/fields/Overdue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Flag__c</fullName>
    <label>Overdue Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>