force-app/main/default/objects/A_Case__c/fields/Owner_is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Changed__c</fullName>
    <label>Owner is Changed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>