force-app/main/default/objects/A_Case__c/fields/Permanent_Close__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Close__c</fullName>
    <label>Permanent Close</label>
    <length>255</length>
    <type>Text</type>
</CustomField>