force-app/main/default/objects/A_Case__c/fields/pkbgeolocalization_Latitude__c.field-meta.xml
<CustomField>
    <fullName>pkbgeolocalization_Latitude__c</fullName>
    <label>Customer Geolocalization (Latitude)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>