force-app/main/default/objects/A_Case__c/fields/PrimaryContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactFirstName__c</fullName>
    <label>Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>