force-app/main/default/objects/A_Case__c/fields/Reason_for_Claim__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Claim__c</fullName>
    <label>Reason for Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>