force-app/main/default/objects/A_Case__c/fields/Reporting_Description__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Description__c</fullName>
    <label>Reporting Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>