force-app/main/default/objects/A_Case__c/fields/S_HasSelfServiceComments__c.field-meta.xml
<CustomField>
    <fullName>S_HasSelfServiceComments__c</fullName>
    <label>Self-Service Commented</label>
    <length>255</length>
    <type>Text</type>
</CustomField>