force-app/main/default/objects/A_Case__c/fields/S_IsStopped__c.field-meta.xml
<CustomField>
    <fullName>S_IsStopped__c</fullName>
    <label>Stopped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>