force-app/main/default/objects/A_Case__c/fields/S_Reason__c.field-meta.xml
<CustomField>
    <fullName>S_Reason__c</fullName>
    <label>Case Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>