force-app/main/default/objects/A_Case__c/fields/S_SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>S_SuppliedPhone__c</fullName>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>