force-app/main/default/objects/A_Case__c/fields/Send_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_Comments__c</fullName>
    <label>Send Case Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>