force-app/main/default/objects/A_Case__c/fields/StarTrack_Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_Receiver_Name__c</fullName>
    <label>Receiver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>