force-app/main/default/objects/A_Case__c/fields/Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval__c</fullName>
    <label>Submit for Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>