force-app/main/default/objects/A_Case__c/fields/Support_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Work_Type__c</fullName>
    <label>Support Work Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>