force-app/main/default/objects/A_Case__c/fields/TempBAUID__c.field-meta.xml
<CustomField>
    <fullName>TempBAUID__c</fullName>
    <label>TempBAUID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>