force-app/main/default/objects/A_Case__c/fields/Time_to_Design_min__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Design_min__c</fullName>
    <label>Time to Design (min)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>