force-app/main/default/objects/A_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calc_Link_Case_Number__c</columns>
    <columns>S_Origin__c</columns>
    <columns>Case_RecordType_Name__c</columns>
    <columns>S_ContactId__c</columns>
    <columns>S_IsClosed__c</columns>
    <columns>S_ClosedDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>